--- a/php-7.3.0/Makefile.fragments
+++ b/php-7.3.0/Makefile.fragments
@@ -3,3 +3,92 @@
 
 /src/php-7.3.0/ext/json/json_parser.tab.c: /src/php-7.3.0/ext/json/json_parser.y
 	$(YACC) --defines -l /src/php-7.3.0/ext/json/json_parser.y -o $@
+/src/php-7.3.0/ext/standard/var_unserializer.c: /src/php-7.3.0/ext/standard/var_unserializer.re
+	@(cd $(top_srcdir); $(RE2C) $(RE2C_FLAGS) --no-generation-date -b -o ext/standard/var_unserializer.c ext/standard/var_unserializer.re)
+
+/src/php-7.3.0/ext/standard/url_scanner_ex.c: /src/php-7.3.0/ext/standard/url_scanner_ex.re
+	@(cd $(top_srcdir); $(RE2C) $(RE2C_FLAGS) --no-generation-date -b -o ext/standard/url_scanner_ex.c	ext/standard/url_scanner_ex.re)
+
+ext/standard/info.lo: ext/standard/../../main/build-defs.h
+
+ext/standard/basic_functions.lo: $(top_srcdir)/Zend/zend_language_parser.h
+$(top_srcdir)/Zend/zend_language_parser.c:
+$(top_srcdir)/Zend/zend_language_scanner.c:
+$(top_srcdir)/ext/tokenizer/tokenizer_data.c: $(top_srcdir)/Zend/zend_language_parser.h
+ext/tokenizer/tokenizer.lo: $(top_srcdir)/Zend/zend_language_parser.c $(top_srcdir)/Zend/zend_language_scanner.c
+#
+# Build environment install
+#
+
+phpincludedir = $(includedir)/php
+phpbuilddir = $(libdir)/build
+
+BUILD_FILES = \
+	scripts/phpize.m4 \
+	build/mkdep.awk \
+	build/scan_makefile_in.awk \
+	build/libtool.m4 \
+	build/ax_check_compile_flag.m4 \
+	build/ax_gcc_func_attribute.m4 \
+	Makefile.global \
+	acinclude.m4 \
+	ltmain.sh \
+	run-tests.php
+
+BUILD_FILES_EXEC = \
+	build/shtool \
+	config.guess \
+	config.sub
+
+bin_SCRIPTS = phpize php-config
+man_PAGES = phpize php-config
+
+install-build:
+	@echo "Installing build environment:     $(INSTALL_ROOT)$(phpbuilddir)/"
+	@$(mkinstalldirs) $(INSTALL_ROOT)$(phpbuilddir) $(INSTALL_ROOT)$(bindir) && \
+	(cd $(top_srcdir) && \
+	$(INSTALL) $(BUILD_FILES_EXEC) $(INSTALL_ROOT)$(phpbuilddir) && \
+	$(INSTALL_DATA) $(BUILD_FILES) $(INSTALL_ROOT)$(phpbuilddir))
+
+install-programs: scripts/phpize scripts/php-config
+	@echo "Installing helper programs:       $(INSTALL_ROOT)$(bindir)/"
+	@$(mkinstalldirs) $(INSTALL_ROOT)$(bindir)
+	@for prog in $(bin_SCRIPTS); do \
+		echo "  program: $(program_prefix)$${prog}$(program_suffix)"; \
+		$(INSTALL) -m 755 scripts/$${prog} $(INSTALL_ROOT)$(bindir)/$(program_prefix)$${prog}$(program_suffix); \
+	done
+	@echo "Installing man pages:             $(INSTALL_ROOT)$(mandir)/man1/"
+	@$(mkinstalldirs) $(INSTALL_ROOT)$(mandir)/man1
+	@for page in $(man_PAGES); do \
+		echo "  page: $(program_prefix)$${page}$(program_suffix).1"; \
+		$(INSTALL_DATA) scripts/man1/$${page}.1 $(INSTALL_ROOT)$(mandir)/man1/$(program_prefix)$${page}$(program_suffix).1; \
+	done
+
+scripts/phpize: /src/php-7.3.0/scripts/phpize.in $(top_builddir)/config.status
+	(CONFIG_FILES=$@ CONFIG_HEADERS= $(top_builddir)/config.status)
+
+scripts/php-config: /src/php-7.3.0/scripts/php-config.in $(top_builddir)/config.status
+	(CONFIG_FILES=$@ CONFIG_HEADERS= $(top_builddir)/config.status)
+#
+# Zend
+#
+
+Zend/zend_language_scanner.lo: /src/php-7.3.0/Zend/zend_language_parser.h
+Zend/zend_ini_scanner.lo: /src/php-7.3.0/Zend/zend_ini_parser.h
+
+/src/php-7.3.0/Zend/zend_language_scanner.c: /src/php-7.3.0/Zend/zend_language_scanner.l
+	@(cd $(top_srcdir); $(RE2C) $(RE2C_FLAGS) --no-generation-date --case-inverted -cbdFt Zend/zend_language_scanner_defs.h -oZend/zend_language_scanner.c Zend/zend_language_scanner.l)
+
+/src/php-7.3.0/Zend/zend_language_parser.h: /src/php-7.3.0/Zend/zend_language_parser.c
+/src/php-7.3.0/Zend/zend_language_parser.c: /src/php-7.3.0/Zend/zend_language_parser.y
+	@$(YACC) -p zend -v -d /src/php-7.3.0/Zend/zend_language_parser.y -o $@
+
+/src/php-7.3.0/Zend/zend_ini_parser.h: /src/php-7.3.0/Zend/zend_ini_parser.c
+/src/php-7.3.0/Zend/zend_ini_parser.c: /src/php-7.3.0/Zend/zend_ini_parser.y
+	@$(YACC) -p ini_ -v -d /src/php-7.3.0/Zend/zend_ini_parser.y -o $@
+
+/src/php-7.3.0/Zend/zend_ini_scanner.c: /src/php-7.3.0/Zend/zend_ini_scanner.l
+	@(cd $(top_srcdir); $(RE2C) $(RE2C_FLAGS) --no-generation-date --case-inverted -cbdFt Zend/zend_ini_scanner_defs.h -oZend/zend_ini_scanner.c Zend/zend_ini_scanner.l)
+
+Zend/zend_highlight.lo Zend/zend_compile.lo: /src/php-7.3.0/Zend/zend_language_parser.h
+Zend/zend_execute.lo: /src/php-7.3.0/Zend/zend_vm_execute.h /src/php-7.3.0/Zend/zend_vm_opcodes.h
